Change searchActiveProducts and getCurrentSelerProducts from List -> Page inkl. tests